# emotion-detection

./: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
emotion_detection/: data_preprocessing.py
